[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Battle/SequenceTriggerPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/images/gui/arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Lato-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 36
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[node name="WindowDialog" type="WindowDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 930.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = ""
resizable = false
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Popup" ]

[node name="MonsterChoices" type="Node2D" parent="." index="1"]

[node name="Target1" type="Sprite" parent="MonsterChoices" index="0"]

position = Vector2( 60, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target2" type="Sprite" parent="MonsterChoices" index="1"]

position = Vector2( 130, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target3" type="Sprite" parent="MonsterChoices" index="2"]

position = Vector2( 200, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target4" type="Sprite" parent="MonsterChoices" index="3"]

position = Vector2( 270, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target5" type="Sprite" parent="MonsterChoices" index="4"]

position = Vector2( 340, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target6" type="Sprite" parent="MonsterChoices" index="5"]

position = Vector2( 410, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target7" type="Sprite" parent="MonsterChoices" index="6"]

position = Vector2( 480, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target8" type="Sprite" parent="MonsterChoices" index="7"]

position = Vector2( 550, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Target9" type="Sprite" parent="MonsterChoices" index="8"]

position = Vector2( 620, 118 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Label" type="Label" parent="MonsterChoices" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_top = 22.0
margin_right = 412.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Remember"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="React" type="Node2D" parent="." index="2"]

[node name="Label2" type="Label" parent="React" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_top = 202.0
margin_right = 412.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "React"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Picked1" type="Sprite" parent="React" index="1"]

position = Vector2( 60, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked2" type="Sprite" parent="React" index="2"]

position = Vector2( 130, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked3" type="Sprite" parent="React" index="3"]

position = Vector2( 200, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked4" type="Sprite" parent="React" index="4"]

position = Vector2( 270, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked5" type="Sprite" parent="React" index="5"]

position = Vector2( 340, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked6" type="Sprite" parent="React" index="6"]

position = Vector2( 410, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked7" type="Sprite" parent="React" index="7"]

position = Vector2( 480, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked8" type="Sprite" parent="React" index="8"]

position = Vector2( 550, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Picked9" type="Sprite" parent="React" index="9"]

position = Vector2( 620, 298 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Controls" type="Node2D" parent="." index="3"]

[node name="Panel" type="Panel" parent="Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 670.0
margin_right = 930.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="Pick" type="Label" parent="Controls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 705.0
margin_top = 71.0
margin_right = 919.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Pick"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Up" type="Button" parent="Controls" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 762.0
margin_top = 139.0
margin_right = 838.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Right" type="Button" parent="Controls" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 914.0
margin_top = 219.0
margin_right = 990.0
margin_bottom = 289.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Offset", "Rect", "Transform" ]

[node name="Down" type="Button" parent="Controls" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 838.0
margin_top = 376.0
margin_right = 914.0
margin_bottom = 446.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Offset", "Rect", "Transform" ]

[node name="Left" type="Button" parent="Controls" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 685.0
margin_top = 287.0
margin_right = 761.0
margin_bottom = 357.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "Offset", "Rect", "Transform" ]

[connection signal="pressed" from="Controls/Up" to="." method="_on_Up_pressed"]

[connection signal="pressed" from="Controls/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="Controls/Down" to="." method="_on_Down_pressed"]

[connection signal="pressed" from="Controls/Left" to="." method="_on_Left_pressed"]


